# engine_workspace

./: .gitignore  CommonConfig.txt  README.md  Tutorial.cap  newFiles
CommonLibs/engine/doc/html/: a00002_source.html  a00005_source.html  a00008_source.html  a00011_source.html  a00014_source.html  a00017_source.html  a00020_source.html  a00023_source.html  a00026_source.html  a00029_source.html  a00032_source.html  a00035_source.html  a00038_source.html  a00041_source.html  a00044_source.html  a00047_source.html  a00050_source.html  a00053_source.html  a00056_source.html  a00059_source.html  a00062_source.html  a00065_source.html  a00068_source.html  a00071_source.html  a00074_source.html  a00083_source.html  a00086_source.html  a00089_source.html  a00092_source.html  a00095_source.html  a00098_source.html  a00101_source.html  a00104_source.html  a00110_source.html  a00113_source.html  a00116_source.html  a00119_source.html  a00122_source.html  a00125_source.html  a00128_source.html  (+307 more)
CommonLibs/engine/docs/: Engine.tag
CommonLibs/engine/docs/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+305 more)
CommonLibs/engine/docs/latex/: a00001.tex  a00002.eps  a00002.tex  a00003.eps  a00003.tex  a00004.eps  a00004.tex  a00005.eps  a00005.tex  a00006.eps  a00006.tex  a00007.tex  a00008.tex  a00009.tex  a00010.tex  a00011.eps  a00011.tex  a00012.eps  a00012.tex  a00013.eps  a00013.tex  a00014.tex  a00015.tex  a00016.tex  a00017.tex  a00018.tex  a00019.tex  a00020.tex  a00021.tex  a00022.tex  a00023.tex  a00024.eps  a00024.tex  a00025.eps  a00025.tex  a00026.eps  a00026.tex  a00027.eps  a00027.tex  a00028.tex  (+150 more)
CommonLibs/engine/include/engine/: Context.h  EngineConfig.h  IModuleExtension.h  ModuleDefinitions.h  Types.h
CommonLibs/engine/include_/engine/: EngineConfig.h  ModuleDefinitions.h
CommonLibs/engine/lib/x32/: Engine.lib
CommonLibs/sdl/lib/x86/: log
Engine/pch/: stdafx.cpp  stdafx.h  stdafx_glew.h  stdafx_win.h
Engine/projects/: updateCodeLite.sh  updateGnuMake.sh  updateMsvc2013.bat  updateMsvc2015.bat
Engine/projects/cmake/: CMakeLists.txt  ClConfig.txt  DoxygenConfig.txt  GccConfig.txt
Engine/projects/doxygen/: Doxyfile.cmake
Engine/source/engine/: Context.cpp  Context.h  EngineConfig.h  ModuleDefinitions.cpp  ModuleDefinitions.h  Types.h  engine_config.h.in
Engine/source/engine/app/: Application.cpp  Application.h  Game.cpp  Game.h  GameMain.cpp  IApplicationParameter.h  IMain.h  StandardApplicationParameter.cpp  StandardApplicationParameter.h
Engine/source/engine/constraints/: Lockable.h  Lockable.hpp  NonMoveable.h  PIMPLCopyable.h  PIMPLMoveable.h  Singleton.h  Singleton.hpp
Engine/source/engine/entityFramework/: CameraComponent.cpp  CameraComponent.h  CameraEntity.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityContainer.cpp  EntityContainer.h  MeshComponent.cpp  MeshComponent.h  OrthoProjectionComponent.cpp  PerspProjectionComponent.cpp  PositionComponent.cpp  PositionComponent.h  ProjectionComponent.cpp  ProjectionComponent.h  SceneComponent.cpp  SceneComponent.h  TransformationComponent.cpp  TransformationComponent.h  VisualComponent.cpp  VisualComponent.h
Engine/source/engine/environmentBuilder/: ApplicationBuilder.cpp  ApplicationBuilder.h  BaseBuilder.cpp  BaseBuilder.h  BuildFinalizer.cpp  (+10 more)
Engine/tools/Scripts/: CreateSkeletonEmptyImplementation.py
EngineTest/: buildData.bat  buildData.sh
EngineTest/data/: longFile.txt  testFile.txt
EngineTest/pch/: stdafx.h
EngineTest/projects/: updateMsvc2013.bat  updateMsvc2015.bat
EngineTest/projects/cmake/: CMakeLists.txt  ClConfig.txt  GccConfig.txt
EngineTest/source/: EngineTestConfig.h  FileSystemRegression.cpp  FileSystemRegression.h  FunctionsRegression.cpp  FunctionsRegression.h  SignalSlotRegression.cpp  SignalSlotRegression.h  StateStackRegression.cpp  StateStackRegression.h  TestMain.cpp  enginetest_config.h.in
EngineTest/source/fileSystem/: FilePathTestSuit.cpp  FilePathTestSuit.h  SimpleFileTestSuit.cpp  SimpleFileTestSuit.h
EngineTest/source/functional/: FunctionsTestSuit.cpp  FunctionsTestSuit.h  FunctionsTestSuite.cpp  FunctionsTestSuite.h
EngineTest/source/signalSlot/: SignalCallerTestSuit.cpp  SignalCallerTestSuit.h  SignalCallerTestSuite.cpp  SignalCallerTestSuite.h  SignalManagerTest.cpp  SignalManagerTest.h  SignalManagerTestSuit.cpp  SignalManagerTestSuit.h  SignalTaksTest.cpp  SignalTaksTest.h  SignalTaksTestSuit.cpp  SignalTaksTestSuit.h  SignalTest.cpp  SignalTest.h  SignalTestSuit.cpp  SignalTestSuit.h  SlotHolderTest.cpp  SlotHolderTest.h  SlotHolderTestSuit.cpp  SlotHolderTestSuit.h
EngineTest/source/stateStack/: StateBaseTestSuit.cpp  StateBaseTestSuit.h  StateBaseTestSuite.cpp  StateBaseTestSuite.h  StateStackTestSuit.cpp  StateStackTestSuit.h  StateStackTestSuite.cpp  StateStackTestSuite.h
EngineTutorial/data/: buildData.bat
EngineTutorial/pch/: stdafx.h
EngineTutorial/projects/: updateMsvc2013.bat  updateMsvc2015.bat
EngineTutorial/projects/cmake/: CMakeLists.txt  ClConfig.txt
EngineTutorial/source/: Log.cpp  Log.h  Main.cpp  RenderDefinitions.cpp  RenderDefinitions.h  TestMain.cpp  TestMain.h  Tutorial.cpp  Tutorial.h  TutorialConfig.h  TutorialMain.cpp  Tutorial_config.h.in
EngineTutorial/source/componentRegisters/: SolidComponentRegister.cpp  SolidComponentRegister.h
EngineTutorial/source/states/: TutorialStep01.cpp  TutorialStep01.h  TutorialStep02.cpp  TutorialStep02.h  TutorialStep03.cpp  TutorialStep03.h
GPUGems/pch/: stdafx.h
GPUGems/projects/cmake/: CMakeLists.txt  ClConfig.txt
GPUGems/source/: GPUGems_config.h.in  GameMain.cpp  GpuGemsConfig.h
(+716 files in other folders)
